--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "@shopify/shopify-app-session-storage-prisma": "^5.0.0",
     "isbot": "^5.1.0",
     "prisma": "^5.11.0",
+    "qrcode": "^1.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "tiny-invariant": "^1.3.3",
     "vite-tsconfig-paths": "^4.3.1"
   },
   "devDependencies": {
